deleted:    Dockerfile 	deleted:    app.py 	new file:   attached_assets/Pasted--workspace-python-main-py-2025-06-16-18-57-22-544-main-INFO-Iniciando-Sistema-de-Sup-1750100328370_1750100328375.txt 	new file:   attached_assets/Pasted-2025-06-16-19-00-58-431-web-panel-ERROR-Exception-on-GET-Traceback-most-recent-call-last--1750100494899_1750100494902.txt 	new file:   bot.py 	new file:   config.py 	new file:   data/faq.py 	new file:   handlers/callbacks.py 	new file:   handlers/commands.py 	new file:   handlers/messages.py 	new file:   logs/support_bot.log 	new file:   logs/support_interactions.log 	new file:   main.py 	new file:   menus/support_menu.py 	new file:   menus/support_menu_dynamic.py 	new file:   panel_config.json 	new file:   pyproject.toml 	modified:   requirements.txt 	new file:   static/css/style.css 	new file:   static/js/main.js 	new file:   support_bot.log 	new file:   templates/base.html 	new file:   templates/dashboard.html 	new file:   templates/faq.html 	deleted:    templates/index.html 	new file:   templates/logs.html 	new file:   templates/menu_editor.html 	new file:   templates/settings.html 	new file:   utils/logger.py 	new file:   uv.lock 	new file:   web_panel.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-quart
-telethon
-flask_socketio
-Flask
-eventlet
+
+python-telegram-bot==20.8
+flask>=3.1.1
+flask-cors>=6.0.1
+httpx
+python-dotenv
