--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-
-python-telegram-bot==20.8
+telegram==0.0.1
 flask>=3.1.1
 flask-cors>=6.0.1
 httpx>=0.24.0
+psutil
+python-dotenv
 telegram
+requests
