--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-BOT_TOKEN=7195198757:AAEzPTbU8el87VrGKGQ6P9a_TDZ0h-txuIg
+BOT_TOKEN=8060615315:AAGZbcQyeyAvrecOEM_lyMjfvmOO-eLnedY
 FLASK_DEBUG=False
 FLASK_PORT=5000
-SUPPORT_CONTACT=@admin
-SUPPORT_EMAIL=support@company.com
+SUPPORT_CONTACT=@Webprontos
+SUPPORT_EMAIL=webpronto@company.com
 
 
 
